feat: add identity & configure providers
